--- a/css/compile.css
+++ b/css/compile.css
@@ -13685,7 +13685,7 @@ textarea {
 
 /*=====owl nav customization======*/
 .owl-nav div {
-  left: -46px;
+  left: -55px;
   top: 50%;
   line-height: 56px;
   margin-top: -30px;
@@ -13694,7 +13694,7 @@ textarea {
   font-size: 50px; }
   .owl-nav div.owl-next {
     left: auto;
-    right: -46px;
+    right: -55px;
     padding-left: 5px;
     padding-right: 0;
     border-radius: 5px 0px 0px 5px; }
@@ -13902,7 +13902,8 @@ textarea {
   transition: .5s;
   text-transform: uppercase;
   font-size: 15px;
-  text-align: center; }
+  text-align: center;
+  letter-spacing: 1px; }
   .boxed-btn:hover {
     background: transparent;
     border: 2px solid; }
@@ -14285,5 +14286,224 @@ textarea {
         left: 0;
         bottom: -17px;
         right: 0; }
+
+.featured-area {
+  padding: 40px 0 50px; }
+  .featured-area .single-featured-item {
+    border: 1px solid #E0EAF2;
+    padding: 15px 15px 20px;
+    border-radius: 5px;
+    background-color: #F0F8FF; }
+    .featured-area .single-featured-item h4 {
+      color: #000000;
+      font-size: 16px;
+      margin: 15px 0 10px; }
+    .featured-area .single-featured-item .featured-price {
+      color: #094372;
+      font-weight: 700;
+      display: block;
+      margin-bottom: 10px; }
+    .featured-area .single-featured-item .price-per-month {
+      color: #000000;
+      font-size: 14px;
+      -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+      align-items: baseline;
+      margin-bottom: 25px; }
+      .featured-area .single-featured-item .price-per-month .monthly-cost {
+        color: #e86e1c;
+        font-weight: 700;
+        font-size: 22px;
+        margin: 0 6px; }
+    .featured-area .single-featured-item .boxed-btn.finance-option {
+      width: 100%;
+      background-color: #094372;
+      margin-bottom: 10px; }
+      .featured-area .single-featured-item .boxed-btn.finance-option:hover {
+        background: transparent;
+        border-color: #094372;
+        color: #094372; }
+    .featured-area .single-featured-item .featured-btn .boxed-btn {
+      padding: 9px 17px; }
+      .featured-area .single-featured-item .featured-btn .boxed-btn.f-share {
+        padding: 5px 14px;
+        background-color: #094372;
+        font-size: 20px; }
+        .featured-area .single-featured-item .featured-btn .boxed-btn.f-share:hover {
+          border-color: #094372;
+          color: #094372;
+          background: transparent; }
+  .featured-area .featured-view-btn {
+    margin-top: 35px; }
+    .featured-area .featured-view-btn .boxed-btn {
+      width: 230px; }
+
+.single-category-item {
+  width: 300px;
+  margin: 0px 20px; }
+
+.category-inner {
+  height: 260px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  border-radius: 5px 5px 0 0; }
+
+.category-inner img {
+  margin-bottom: 20px; }
+
+.category-inner h4 {
+  font-size: 22px;
+  color: #e86e1c;
+  margin: 0; }
+
+.category-inner h4 span {
+  display: block;
+  font-size: 14px;
+  color: #094372;
+  margin-bottom: 8px;
+  text-transform: uppercase; }
+
+.single-category-item {
+  background: #fff; }
+  .single-category-item .boxed-btn {
+    width: 100%;
+    border-radius: 0 0 5px 5px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s; }
+    .single-category-item .boxed-btn:hover {
+      background: #fff;
+      color: #e86e1c; }
+  .single-category-item:hover .boxed-btn {
+    opacity: 1;
+    visibility: visible; }
+  .single-category-item:hover .category-inner {
+    -webkit-box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2); }
+
+.finance-area {
+  padding: 35px 0 80px; }
+
+.finance-slider-wrap {
+  margin-bottom: 70px; }
+
+.finance-logo-wrap {
+  width: 850px;
+  margin: 0 auto;
+  margin-top: 90px; }
+
+.group-content-area {
+  padding: 80px 0 65px; }
+
+.about-section-left {
+  width: 530px;
+  background-size: cover;
+  background-position: center;
+  background-color: #ddd; }
+
+.about-section-right {
+  width: 580px;
+  background: #094372;
+  padding: 35px 40px;
+  color: #C3CBD5; }
+
+.about-section-wrap {
+  margin-bottom: 30px; }
+
+.about-section-right h3 {
+  font-size: 26px;
+  margin-bottom: 10px;
+  color: #ffffff; }
+
+.about-section-right h4 {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.3;
+  color: #ffffff; }
+
+.about-section-right .boxed-btn i {
+  margin-left: 3px; }
+
+.group-reviews-section {
+  margin-right: 15px;
+  background-color: #094372;
+  color: #fff; }
+
+.deposit-section-wrap {
+  margin-left: 15px;
+  background-size: cover;
+  background-position: center;
+  z-index: 2;
+  color: #C3CBD5; }
+
+.single-logo-section {
+  width: 210px;
+  height: 200px; }
+
+.single-logo-section.logo-colored {
+  background-color: #E86E1C;
+  width: 330px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  justify-content: center !important;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.single-logo-section.logo-colored div {
+  margin: 15px 0; }
+
+.reviews-section {
+  padding: 35px 110px 60px 90px;
+  color: #C3CBD5; }
+
+.single-review-item h4 {
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 10px; }
+
+.stars span {
+  color: #ED8A19;
+  margin-right: 3px; }
+
+.deposit-section-wrap:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  content: "";
+  z-index: -1;
+  opacity: .7; }
+
+.deposit-section-wrap .depo-percent {
+  color: #fff;
+  font-size: 120px;
+  font-weight: 700;
+  line-height: 90px;
+  display: block;
+  color: #E86E1C;
+  margin-bottom: 15px; }
+
+.deposit-section h3 {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #fff; }
+
+.deposit-section {
+  padding: 0 30px; }
+
+.deposit-section .boxed-btn {
+  margin-top: 10px; }
 
 /*# sourceMappingURL=compile.css.map */
