--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,6 +17,7 @@
     text-transform: uppercase;
     font-size: 15px;
     text-align: center;
+    letter-spacing: 1px;
     &:hover {
         background: transparent;
         @extend %secondary-color;
