--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -449,11 +449,267 @@
     }
 }
 
+// .featured-area
+.featured-area {
+    padding: 40px 0 50px;
+    .single-featured-item {
+        border: 1px solid #E0EAF2;
+        padding: 15px 15px 20px;
+        border-radius: 5px;
+        background-color: #F0F8FF;
+        h4 {
+            color: #000000;
+            font-size: 16px;
+            margin: 15px 0 10px;
+        }
+        .featured-price {
+            color: #094372;
+            font-weight: 700;
+            display: block;
+            margin-bottom: 10px;
+        }
+        .price-per-month {
+            color: #000000;
+            font-size: 14px;
+            align-items: baseline;
+            margin-bottom: 25px;
+            .monthly-cost {
+                color: #e86e1c;
+                font-weight: 700;
+                font-size: 22px;
+                margin: 0 6px;
+            }
+        }
+        .boxed-btn{
+            &.finance-option {
+                width: 100%;
+                background-color: #094372;
+                margin-bottom: 10px;
+                &:hover {
+                    background: transparent;
+                    border-color: #094372;
+                    color: #094372;
+                }
+            }
+        }
+        .featured-btn  {
+            .boxed-btn{
+                padding: 9px 17px;
+                &.f-share {
+                    padding: 5px 14px;
+                    background-color: #094372;
+                    font-size: 20px;
+                    &:hover {
+                        border-color: #094372;
+                        color: #094372;
+                        background: transparent;
+                    }
+                }
+            }
+        }
+    }
+    .featured-view-btn {
+        margin-top: 35px;
+        .boxed-btn {
+            width: 230px;
+        }
+    }
+}
 
 
+// finance-area
+.single-category-item {
+    width: 300px;
+    margin: 0px 20px;
+}
+
+.category-inner {
+    height: 260px;
+    transition: .5s;
+    border-radius: 5px 5px 0 0;
+}
+
+.category-inner img {
+    margin-bottom: 20px;
+}
+
+.category-inner h4 {
+    font-size: 22px;
+    color: #e86e1c;
+    margin: 0;
+}
+
+.category-inner h4 span {
+    display: block;
+    font-size: 14px;
+    color: #094372;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+}
+
+.single-category-item {
+    background: #fff;
+    .boxed-btn {
+        width: 100%;
+        border-radius: 0 0 5px 5px;
+        opacity: 0;
+        visibility: hidden;
+        transition: .5s;
+        &:hover{
+            background: #fff;
+            color: #e86e1c;
+        }
+    }
+    &:hover{
+        .boxed-btn{
+            opacity: 1;
+            visibility: visible;
+        }
+        .category-inner {
+            box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
+        }
+    }
+}
+
+.finance-area {
+    padding: 35px 0 80px;
+}
+
+.finance-slider-wrap {
+    margin-bottom: 70px;
+}
+
+.finance-logo-wrap {
+    width: 850px;
+    margin: 0 auto;
+    margin-top: 90px;
+}
 
 
+// .group-content-area
+.group-content-area {
+    padding: 80px 0 65px;
+}
 
+.about-section-left {
+    width: 530px;
+    background-size: cover;
+    background-position: center;
+    background-color: #ddd;
+}
 
+.about-section-right {
+    width: 580px;
+    background: #094372;
+    padding: 35px 40px;
+    color: #C3CBD5;
+}
+
+.about-section-wrap {
+    margin-bottom: 30px;
+}
+
+.about-section-right h3 {
+    font-size: 26px;
+    margin-bottom: 10px;
+    color: #ffffff;
+}
+
+.about-section-right h4 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.3;
+    color: #ffffff;
+}
+
+.about-section-right .boxed-btn i {
+    margin-left: 3px;
+}
+.group-reviews-section {
+    margin-right: 15px;
+    background-color: #094372;
+    color: #fff;
+}
+
+.deposit-section-wrap {
+    margin-left: 15px;
+    background-size: cover;
+    background-position: center;
+    z-index: 2;
+    color: #C3CBD5;
+}
+
+.single-logo-section {}
+
+.single-logo-section {
+    width: 210px;
+    height: 200px;
+}
+
+.single-logo-section.logo-colored {
+    background-color: #E86E1C;
+    width: 330px;
+    flex-direction: column;
+    justify-content: center !important;
+    align-items: center;
+}
+
+.single-logo-section.logo-colored div {
+    margin: 15px 0;
+}
+
+.reviews-section {
+    padding: 35px 110px 60px 90px;
+    color: #C3CBD5;
+}
+
+.single-review-item h4 {
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.stars span {
+    color: #ED8A19;
+    margin-right: 3px;
+}
+
+.deposit-section-wrap:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    content: "";
+    z-index: -1;
+    opacity: .7;
+}
+
+.deposit-section-wrap .depo-percent {
+    color: #fff;
+    font-size: 120px;
+    font-weight: 700;
+    line-height: 90px;
+    display: block;
+    color: #E86E1C;
+    margin-bottom: 15px;
+}
+
+.deposit-section h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.deposit-section {
+    padding: 0 30px;
+}
+
+.deposit-section .boxed-btn {
+    margin-top: 10px;
+}
 
 
