--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,6 +1,4 @@
 /*======fonts==============*/ 
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Signika+Negative:700&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=Signika+Negative:700&display=swap');
 
-// @import url('https://fonts.googleapis.com/css?family=Fira+Mono:700&display=swap');
