--- a/css/compile.css
+++ b/css/compile.css
@@ -5,8 +5,7 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Signika+Negative:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Signika+Negative:700&display=swap");
 :root {
   --blue:#007bff;
   --indigo:#6610f2;
@@ -13636,7 +13635,8 @@ p:last-child {
 input[type=text], input[type=email], input[type=password], input[type=tel], input[type=url], textarea {
   border-radius: 5px;
   height: 50px;
-  padding: 8px 20px; }
+  padding: 13px 20px;
+  border: 0; }
 
 .form-group {
   margin-bottom: 25px; }
@@ -13676,12 +13676,14 @@ textarea {
 
 /*======.owl-dots customization=======*/
 .owl-dots div {
-  height: 5px;
-  width: 5px;
-  background-color: #BBBBBB;
+  height: 10px;
+  width: 10px;
+  background-color: #ffffff;
   display: inline-block;
-  margin: 0 5px;
+  margin: 0 4px;
   border-radius: 50%; }
+  .owl-dots div.active {
+    background-color: #E86E1C; }
 
 /*=====owl nav customization======*/
 .owl-nav div {
@@ -13887,6 +13889,101 @@ textarea {
     width: 100%; } }
 
 /*============== Footer CSS ================*/
+.footer-area {
+  padding: 70px 0 0;
+  background-color: #052844;
+  color: #C3CBD5; }
+  .footer-area h5 {
+    color: #fff;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 600; }
+
+.newsletter-signup-section {
+  text-transform: uppercase;
+  font-size: 15px; }
+  .newsletter-signup-section h4 {
+    font-size: 18px;
+    color: #fff;
+    margin: 0 0 5px;
+    font-weight: 600; }
+  .newsletter-signup-section .signup-form {
+    margin-top: 25px; }
+    .newsletter-signup-section .signup-form span {
+      position: relative; }
+      .newsletter-signup-section .signup-form span:after {
+        position: absolute;
+        right: 17px;
+        top: -5px;
+        content: "\f0e0";
+        font-family: fontawesome;
+        font-size: 20px;
+        color: #CCCCCC; }
+      .newsletter-signup-section .signup-form span input[type=email] {
+        width: 100%;
+        padding: 13px 45px 13px 15px; }
+    .newsletter-signup-section .signup-form .boxed-btn {
+      padding: 12px 35px;
+      margin-top: 20px; }
+
+.single-quick-link {
+  margin-left: 50px;
+  width: 60%; }
+  .single-quick-link.quick-right {
+    margin-left: 30px;
+    width: 40%; }
+  .single-quick-link ul li {
+    margin-bottom: 10px; }
+    .single-quick-link ul li a {
+      color: #fff;
+      font-size: 15px;
+      padding: 3px 0;
+      opacity: .7;
+      -webkit-transition: .5s;
+      -o-transition: .5s;
+      transition: .5s; }
+      .single-quick-link ul li a:hover {
+        opacity: 1;
+        padding-left: 10px; }
+
+.single-footer-contact .footer-facebook {
+  width: 180px;
+  background-color: #fff;
+  color: #225E9A;
+  height: 30px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 50px; }
+  .single-footer-contact .footer-facebook i {
+    width: 40px;
+    background-color: #225E9A;
+    color: #fff;
+    height: 30px;
+    font-size: 18px;
+    padding: 7px 0 0 14px; }
+
+.single-footer-contact .footer-phone {
+  color: #fff;
+  opacity: .7;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s; }
+  .single-footer-contact .footer-phone i {
+    margin-right: 3px; }
+  .single-footer-contact .footer-phone:hover {
+    opacity: 1; }
+
+.footer-copyright-section {
+  padding: 18px 0;
+  margin-top: 50px;
+  border-top: 1px solid #375369;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 1px; }
+  .footer-copyright-section .autohq-logo img {
+    max-width: 100px; }
+
 /*=========== Button CSS ==========*/
 .boxed-btn {
   padding: 9px 22px;
@@ -13911,7 +14008,7 @@ textarea {
 .section-title, .section-title h2, .owl-nav div {
   color: #094372; }
 
-.owl-dots div.active, .mainmenu ul li ul li:hover > a, .homepage-slider-area .owl-nav div, .car-search-area {
+.mainmenu ul li ul li:hover > a, .homepage-slider-area .owl-nav div, .car-search-area {
   background-color: #094372; }
 
 .form-group .form-control:focus, .form-group .form-control:hover, textarea:focus, textarea:hover, .nice-select:focus, .nice-select:hover, .nice-select:hover:after {
@@ -14075,8 +14172,7 @@ textarea {
       .car-search-area .select-dropdowns .single-select-dropdown:last-child {
         padding-right: 0; }
   .car-search-area .finance-range-slider-1 {
-    width: 390px;
-    margin-right: 50px; }
+    width: 390px; }
     .car-search-area .finance-range-slider-1 .pm-range-slider:before, .car-search-area .finance-range-slider-1 .pm-range-slider:after {
       display: none; }
     .car-search-area .finance-range-slider-1 .slider-price .min-price {
@@ -14338,99 +14434,212 @@ textarea {
     .featured-area .featured-view-btn .boxed-btn {
       width: 230px; }
 
-.single-category-item {
-  width: 300px;
-  margin: 0px 20px; }
-
-.category-inner {
-  height: 260px;
-  -webkit-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
-  border-radius: 5px 5px 0 0; }
-
-.category-inner img {
-  margin-bottom: 20px; }
-
-.category-inner h4 {
-  font-size: 22px;
-  color: #e86e1c;
-  margin: 0; }
-
-.category-inner h4 span {
-  display: block;
-  font-size: 14px;
-  color: #094372;
-  margin-bottom: 8px;
-  text-transform: uppercase; }
-
-.single-category-item {
-  background: #fff; }
-  .single-category-item .boxed-btn {
-    width: 100%;
-    border-radius: 0 0 5px 5px;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s; }
-    .single-category-item .boxed-btn:hover {
-      background: #fff;
-      color: #e86e1c; }
-  .single-category-item:hover .boxed-btn {
-    opacity: 1;
-    visibility: visible; }
-  .single-category-item:hover .category-inner {
-    -webkit-box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2); }
-
 .finance-area {
-  padding: 35px 0 80px; }
+  padding: 50px 0 80px; }
+  .finance-area .finance-slider-wrap {
+    width: 770px;
+    background-color: #ffffff;
+    margin: 0 auto 75px; }
+  .finance-area .finance-category-wrap .single-category-item {
+    width: 300px;
+    margin: 0px 20px;
+    background: #fff; }
+    .finance-area .finance-category-wrap .single-category-item .category-inner {
+      height: 260px;
+      -webkit-transition: .5s;
+      -o-transition: .5s;
+      transition: .5s;
+      border-radius: 5px 5px 0 0; }
+      .finance-area .finance-category-wrap .single-category-item .category-inner img {
+        margin-bottom: 20px; }
+      .finance-area .finance-category-wrap .single-category-item .category-inner h4 {
+        font-size: 22px;
+        color: #e86e1c;
+        margin: 0; }
+        .finance-area .finance-category-wrap .single-category-item .category-inner h4 span {
+          display: block;
+          font-size: 14px;
+          color: #094372;
+          margin-bottom: 8px;
+          text-transform: uppercase; }
+    .finance-area .finance-category-wrap .single-category-item .boxed-btn {
+      width: 100%;
+      border-radius: 0 0 5px 5px;
+      opacity: 0;
+      visibility: hidden;
+      -webkit-transition: .5s;
+      -o-transition: .5s;
+      transition: .5s; }
+      .finance-area .finance-category-wrap .single-category-item .boxed-btn:hover {
+        background: #fff;
+        color: #e86e1c; }
+    .finance-area .finance-category-wrap .single-category-item:hover .boxed-btn {
+      opacity: 1;
+      visibility: visible; }
+    .finance-area .finance-category-wrap .single-category-item:hover .category-inner {
+      -webkit-box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2); }
+  .finance-area .finance-logo-wrap {
+    width: 850px;
+    margin: 0 auto;
+    margin-top: 90px; }
 
-.finance-slider-wrap {
-  margin-bottom: 70px; }
+.finance-slider-wrap .section-title .fsection-text {
+  letter-spacing: 2px; }
 
-.finance-logo-wrap {
-  width: 850px;
+.finance-slider-wrap .section-title h2 {
+  /* letter-spacing: 0.01rem; */
+  /* letter-spacing: 1px; */ }
+
+.finance-slider-wrap .boxed-btn {
   margin: 0 auto;
-  margin-top: 90px; }
+  display: block;
+  margin-top: 60px;
+  width: 200px; }
+
+.finance-slider-wrap .section-title {
+  margin-bottom: 55px; }
+
+.finance-range-slider-2 .slider-labels span {
+  font-size: 22px;
+  font-weight: 700;
+  color: #094372; }
+
+.finance-range-slider-2 .range-slider {
+  padding: 40px 0 0; }
+
+.finance-range-slider-2 .slider-labels .max-text {
+  right: -33px;
+  top: -45px; }
+
+.finance-range-slider-2 .slider-labels .min-text {
+  left: -24px;
+  top: -45px; }
+
+.finance-range-slider-2 .pm-range-slider:before, .finance-range-slider-2 .pm-range-slider:after {
+  background-color: #094372;
+  z-index: 2; }
+
+.finance-range-slider-2 .pm-range-slider {
+  background-color: #094372; }
+
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle {
+  width: 70px;
+  height: 30px;
+  top: -45px;
+  z-index: 3;
+  color: #000;
+  font-size: 22px;
+  font-weight: 700;
+  border-radius: 0;
+  text-align: center;
+  background: #ffffff;
+  margin-left: -35px;
+  padding-left: 10px; }
+
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle:after {
+  position: absolute;
+  left: 15px;
+  top: 29px;
+  content: "+";
+  width: 40px;
+  height: 40px;
+  background: #E86E1C;
+  border-radius: 50px;
+  line-height: 40px;
+  color: #fff; }
+
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle:before {
+  position: absolute;
+  left: 5px;
+  top: 0;
+  content: "£"; }
 
 .group-content-area {
   padding: 80px 0 65px; }
 
-.about-section-left {
-  width: 530px;
-  background-size: cover;
-  background-position: center;
-  background-color: #ddd; }
-
-.about-section-right {
-  width: 580px;
-  background: #094372;
-  padding: 35px 40px;
-  color: #C3CBD5; }
-
 .about-section-wrap {
   margin-bottom: 30px; }
-
-.about-section-right h3 {
-  font-size: 26px;
-  margin-bottom: 10px;
-  color: #ffffff; }
-
-.about-section-right h4 {
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.3;
-  color: #ffffff; }
-
-.about-section-right .boxed-btn i {
-  margin-left: 3px; }
+  .about-section-wrap .about-section-left {
+    width: 530px;
+    background-size: cover;
+    background-position: center;
+    background-color: #ddd; }
+  .about-section-wrap .about-section-right {
+    width: 580px;
+    background: #094372;
+    padding: 35px 40px;
+    color: #C3CBD5; }
+    .about-section-wrap .about-section-right h3 {
+      font-size: 26px;
+      margin-bottom: 10px;
+      color: #ffffff; }
+    .about-section-wrap .about-section-right h4 {
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 1.3;
+      color: #ffffff; }
+    .about-section-wrap .about-section-right .boxed-btn i {
+      margin-left: 3px; }
 
 .group-reviews-section {
   margin-right: 15px;
   background-color: #094372;
   color: #fff; }
+
+.reviews-logo-section .single-logo-section {
+  width: 210px;
+  height: 200px; }
+  .reviews-logo-section .single-logo-section.logo-colored {
+    background-color: #E86E1C;
+    width: 330px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center !important;
+    -ms-flex-pack: center !important;
+    justify-content: center !important;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .reviews-logo-section .single-logo-section.logo-colored div {
+      margin: 15px 0; }
+
+.reviews-section {
+  padding: 35px 110px 60px 90px;
+  color: #C3CBD5; }
+  .reviews-section .single-review-item h4 {
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 10px; }
+  .reviews-section .single-review-item .stars span {
+    color: #ED8A19;
+    margin-right: 3px; }
+  .reviews-section .review-carousel {
+    position: relative; }
+    .reviews-section .review-carousel:after {
+      position: absolute;
+      left: -60px;
+      top: -12px;
+      font-family: fontawesome;
+      font-size: 40px;
+      color: #3A698E;
+      content: "\f10d"; }
+    .reviews-section .review-carousel:before {
+      position: absolute;
+      right: -66px;
+      bottom: 0;
+      font-family: fontawesome;
+      color: #3A698E;
+      font-size: 40px;
+      content: "\f10e"; }
+  .reviews-section .owl-dots {
+    position: absolute;
+    right: -75px;
+    bottom: -35px; }
 
 .deposit-section-wrap {
   margin-left: 15px;
@@ -14438,72 +14647,30 @@ textarea {
   background-position: center;
   z-index: 2;
   color: #C3CBD5; }
-
-.single-logo-section {
-  width: 210px;
-  height: 200px; }
-
-.single-logo-section.logo-colored {
-  background-color: #E86E1C;
-  width: 330px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center !important;
-  -ms-flex-pack: center !important;
-  justify-content: center !important;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
-.single-logo-section.logo-colored div {
-  margin: 15px 0; }
-
-.reviews-section {
-  padding: 35px 110px 60px 90px;
-  color: #C3CBD5; }
-
-.single-review-item h4 {
-  color: #fff;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-bottom: 10px; }
-
-.stars span {
-  color: #ED8A19;
-  margin-right: 3px; }
-
-.deposit-section-wrap:after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  content: "";
-  z-index: -1;
-  opacity: .7; }
-
-.deposit-section-wrap .depo-percent {
-  color: #fff;
-  font-size: 120px;
-  font-weight: 700;
-  line-height: 90px;
-  display: block;
-  color: #E86E1C;
-  margin-bottom: 15px; }
-
-.deposit-section h3 {
-  font-size: 30px;
-  text-transform: uppercase;
-  color: #fff; }
-
-.deposit-section {
-  padding: 0 30px; }
-
-.deposit-section .boxed-btn {
-  margin-top: 10px; }
+  .deposit-section-wrap:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    content: "";
+    z-index: -1;
+    opacity: .7; }
+  .deposit-section-wrap .deposit-section {
+    padding: 0 30px; }
+    .deposit-section-wrap .deposit-section .depo-percent {
+      font-size: 120px;
+      font-weight: 900;
+      line-height: 90px;
+      display: block;
+      color: #E86E1C;
+      margin-bottom: 15px; }
+    .deposit-section-wrap .deposit-section h3 {
+      font-size: 30px;
+      text-transform: uppercase;
+      color: #fff; }
+    .deposit-section-wrap .deposit-section .boxed-btn {
+      margin-top: 10px; }
 
 /*# sourceMappingURL=compile.css.map */
