--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -183,7 +183,7 @@
     }
     .finance-range-slider-1{
         width: 390px;
-        margin-right: 50px;
+        // margin-right: 50px;
         .pm-range-slider{
             &:before, &:after{
                 display: none;
@@ -518,198 +518,296 @@
 
 
 // finance-area
-.single-category-item {
-    width: 300px;
-    margin: 0px 20px;
-}
-
-.category-inner {
-    height: 260px;
-    transition: .5s;
-    border-radius: 5px 5px 0 0;
-}
-
-.category-inner img {
-    margin-bottom: 20px;
-}
-
-.category-inner h4 {
-    font-size: 22px;
-    color: #e86e1c;
-    margin: 0;
-}
-
-.category-inner h4 span {
-    display: block;
-    font-size: 14px;
-    color: #094372;
-    margin-bottom: 8px;
-    text-transform: uppercase;
-}
-
-.single-category-item {
-    background: #fff;
-    .boxed-btn {
-        width: 100%;
-        border-radius: 0 0 5px 5px;
-        opacity: 0;
-        visibility: hidden;
-        transition: .5s;
-        &:hover{
-            background: #fff;
-            color: #e86e1c;
-        }
-    }
-    &:hover{
-        .boxed-btn{
-            opacity: 1;
-            visibility: visible;
-        }
-        .category-inner {
-            box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
-        }
-    }
-}
-
 .finance-area {
-    padding: 35px 0 80px;
+    padding: 50px 0 80px;
+    // .finance-slider-wrap
+    .finance-slider-wrap {
+        width: 770px;
+        background-color: #ffffff;
+        margin: 0 auto 75px;
+    }
+    // finance-category-wrap
+    .finance-category-wrap{
+        .single-category-item {
+            width: 300px;
+            margin: 0px 20px;
+            background: #fff;
+            .category-inner {
+                height: 260px;
+                transition: .5s;
+                border-radius: 5px 5px 0 0;
+                img {
+                    margin-bottom: 20px;
+                }
+                h4 {
+                    font-size: 22px;
+                    color: #e86e1c;
+                    margin: 0;
+                    span {
+                        display: block;
+                        font-size: 14px;
+                        color: #094372;
+                        margin-bottom: 8px;
+                        text-transform: uppercase;
+                    }
+                }
+            }
+            .boxed-btn {
+                width: 100%;
+                border-radius: 0 0 5px 5px;
+                opacity: 0;
+                visibility: hidden;
+                transition: .5s;
+                &:hover{
+                    background: #fff;
+                    color: #e86e1c;
+                }
+            }
+            &:hover{
+                .boxed-btn{
+                    opacity: 1;
+                    visibility: visible;
+                }
+                .category-inner {
+                    box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
+                }
+            }
+        }
+    }
+    // finance-logo-wrap
+    .finance-logo-wrap {
+        width: 850px;
+        margin: 0 auto;
+        margin-top: 90px;
+    }
 }
 
-.finance-slider-wrap {
-    margin-bottom: 70px;
+
+
+.finance-slider-wrap .section-title .fsection-text {
+    letter-spacing: 2px;
 }
 
-.finance-logo-wrap {
-    width: 850px;
+.finance-slider-wrap .section-title h2 {
+    /* letter-spacing: 0.01rem; */
+    /* letter-spacing: 1px; */
+}
+
+.finance-slider-wrap .boxed-btn {
     margin: 0 auto;
-    margin-top: 90px;
+    display: block;
+    margin-top: 60px;
+    width: 200px;
+}
+.finance-slider-wrap .section-title {
+    margin-bottom: 55px;
 }
 
+.finance-range-slider-2 .slider-labels span {
+    font-size: 22px;
+    font-weight: 700;
+    color: #094372;
+}
+.finance-range-slider-2  {
+    .range-slider {
+        padding: 40px 0 0;
+    }
+}
+
+.finance-range-slider-2 .slider-labels .max-text {
+    right: -33px;
+    top: -45px;
+}
+
+.finance-range-slider-2 .slider-labels .min-text {
+    left: -24px;
+    top: -45px;
+}
+
+.finance-range-slider-2 .pm-range-slider:before, .finance-range-slider-2 .pm-range-slider:after {
+    background-color: #094372;
+    z-index: 2;
+}
+
+.finance-range-slider-2 .pm-range-slider {
+    background-color: #094372;
+}
+
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle {
+    width: 70px;
+    height: 30px;
+    top: -45px;
+    z-index: 3;
+    color: #000;
+    font-size: 22px;
+    font-weight: 700;
+    border-radius: 0;
+    text-align: center;
+    background: #ffffff;
+    margin-left: -35px;
+    padding-left: 10px;
+}
+
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle:after {
+    position: absolute;
+    left: 15px;
+    top: 29px;
+    content: "+";
+    width: 40px;
+    height: 40px;
+    background: #E86E1C;
+    border-radius: 50px;
+    line-height: 40px;
+    color: #fff;
+}
+.finance-range-slider-2 .pm-range-slider .ui-slider-handle:before {
+    position: absolute;
+    left: 5px;
+    top: 0;
+    content: "£";
+}
 
 // .group-content-area
 .group-content-area {
     padding: 80px 0 65px;
 }
-
-.about-section-left {
-    width: 530px;
-    background-size: cover;
-    background-position: center;
-    background-color: #ddd;
-}
-
-.about-section-right {
-    width: 580px;
-    background: #094372;
-    padding: 35px 40px;
-    color: #C3CBD5;
-}
-
+// .about-section-wrap
 .about-section-wrap {
     margin-bottom: 30px;
+    .about-section-left {
+        width: 530px;
+        background-size: cover;
+        background-position: center;
+        background-color: #ddd;
+    }
+    .about-section-right {
+        width: 580px;
+        background: #094372;
+        padding: 35px 40px;
+        color: #C3CBD5;
+        h3 {
+            font-size: 26px;
+            margin-bottom: 10px;
+            color: #ffffff;
+        }
+        h4 {
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 1.3;
+            color: #ffffff;
+        }
+        .boxed-btn i {
+            margin-left: 3px;
+        }
+    }
 }
-
-.about-section-right h3 {
-    font-size: 26px;
-    margin-bottom: 10px;
-    color: #ffffff;
-}
-
-.about-section-right h4 {
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.3;
-    color: #ffffff;
-}
-
-.about-section-right .boxed-btn i {
-    margin-left: 3px;
-}
+// .reviews-section
 .group-reviews-section {
     margin-right: 15px;
     background-color: #094372;
     color: #fff;
 }
-
+// .reviews-logo-section
+.reviews-logo-section{
+    .single-logo-section {
+        width: 210px;
+        height: 200px;
+        &.logo-colored {
+            background-color: #E86E1C;
+            width: 330px;
+            flex-direction: column;
+            justify-content: center !important;
+            align-items: center;
+            div {
+                margin: 15px 0;
+            }
+        }
+    }
+}
+// .reviews-section
+.reviews-section {
+    padding: 35px 110px 60px 90px;
+    color: #C3CBD5;
+    .single-review-item {
+        h4 {
+            color: #fff;
+            font-size: 18px;
+            text-transform: uppercase;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+        .stars {
+            span {
+                color: #ED8A19;
+                margin-right: 3px;
+            }
+        }
+    }
+    .review-carousel {
+        position: relative;
+        &:after {
+            position: absolute;
+            left: -60px;
+            top: -12px;
+            font-family: fontawesome;
+            font-size: 40px;
+            color: #3A698E;
+            content: "\f10d";
+        }
+        &:before {
+            position: absolute;
+            right: -66px;
+            bottom: 0;
+            font-family: fontawesome;
+            color: #3A698E;
+            font-size: 40px;
+            content: "\f10e";
+        }
+    }
+    .owl-dots {
+        position: absolute;
+        right: -75px;
+        bottom: -35px;
+    }
+}
+// .deposit-section-wrap 
 .deposit-section-wrap {
     margin-left: 15px;
     background-size: cover;
     background-position: center;
     z-index: 2;
     color: #C3CBD5;
+    &:after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        content: "";
+        z-index: -1;
+        opacity: .7;
+    }
+    .deposit-section {
+        padding: 0 30px;
+        .depo-percent {
+            font-size: 120px;
+            font-weight: 900;
+            line-height: 90px;
+            display: block;
+            color: #E86E1C;
+            margin-bottom: 15px;
+        }
+        h3 {
+            font-size: 30px;
+            text-transform: uppercase;
+            color: #fff;
+        }
+        .boxed-btn {
+            margin-top: 10px;
+        }
+    }
 }
 
-.single-logo-section {}
-
-.single-logo-section {
-    width: 210px;
-    height: 200px;
-}
-
-.single-logo-section.logo-colored {
-    background-color: #E86E1C;
-    width: 330px;
-    flex-direction: column;
-    justify-content: center !important;
-    align-items: center;
-}
-
-.single-logo-section.logo-colored div {
-    margin: 15px 0;
-}
-
-.reviews-section {
-    padding: 35px 110px 60px 90px;
-    color: #C3CBD5;
-}
-
-.single-review-item h4 {
-    color: #fff;
-    font-size: 18px;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-.stars span {
-    color: #ED8A19;
-    margin-right: 3px;
-}
-
-.deposit-section-wrap:after {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    content: "";
-    z-index: -1;
-    opacity: .7;
-}
-
-.deposit-section-wrap .depo-percent {
-    color: #fff;
-    font-size: 120px;
-    font-weight: 700;
-    line-height: 90px;
-    display: block;
-    color: #E86E1C;
-    margin-bottom: 15px;
-}
-
-.deposit-section h3 {
-    font-size: 30px;
-    text-transform: uppercase;
-    color: #fff;
-}
-
-.deposit-section {
-    padding: 0 30px;
-}
-
-.deposit-section .boxed-btn {
-    margin-top: 10px;
-}
 
 
