--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -745,6 +745,8 @@
     }
     .review-carousel {
         position: relative;
+        width: 350px;
+        margin: 0 auto;
         &:after {
             position: absolute;
             left: -60px;
