--- a/scss/helpers/_helpers.scss
+++ b/scss/helpers/_helpers.scss
@@ -42,6 +42,9 @@
 %justifycenter{
 	justify-content: center;
 }
+%justifybetween{
+	justify-content: space-between;
+}
 %alignitemscenter{
 	align-items: center;
 }
